<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_space"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:contentDescription="@string/content_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/small_space"
                android:layout_marginStart="@dimen/small_space"
                style="@style/textTitles"/>

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="@dimen/normal_icon"
                android:layout_height="@dimen/normal_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/big_space2"
                android:contentDescription="@string/user_icon"
                android:foreground="@drawable/user_icon"
                android:background="@drawable/rounded"
                android:clipToOutline="true"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_icon"
                style="@style/textTitles"
                android:layout_marginTop="@dimen/normal_space"
                />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name"
                style="@style/textLabels"
                android:layout_marginTop="@dimen/small_space"/>

            <Button
                android:id="@+id/linkbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_email"
                style="@style/buttonLinks"
                android:layout_marginTop="@dimen/normal_space"/>

            <Button
                android:id="@+id/edit_icon"
                android:layout_width="@dimen/small_icon"
                android:layout_height="@dimen/small_icon"
                app:layout_constraintBottom_toTopOf="@+id/user_name"
                app:layout_constraintEnd_toEndOf="@+id/user_icon"
                app:layout_constraintStart_toStartOf="@+id/user_icon"
                style="@style/buttonEdit"
                android:foreground="@drawable/edit_icon"
                android:background="@drawable/rounded"
                />

            <TextView
                android:id="@+id/labelSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_settings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linkbutton"
                android:layout_marginTop="@dimen/normal_space"
                style="@style/textLabels"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/labelSettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/normal_space"
                />

            <TextView
                android:id="@+id/HaS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_helpsupport"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerSettings"
                android:layout_marginTop="@dimen/big_space"
                style="@style/textLabels"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerHaS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/HaS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/normal_space"
                />

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerHaS"
                style="@style/buttonLogout"
                android:layout_marginTop="@dimen/normal_space"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="@dimen/no_space"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        android:background="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>

